@@ -32,6 +32,10 @@ typedef struct _FB_ERRORCTX {
 	void         *resnxt_lbl;
 } FB_ERRORCTX;
 
+FBCALL void          fb_Assert          ( char *filename, int linenum, char *funcname, char *expression );
+FBCALL void          fb_AssertWarn      ( char *filename, int linenum, char *funcname, char *expression );
+FBCALL void          fb_AssertW         ( char *filename, int linenum, char *funcname, FB_WCHAR *expression );
+FBCALL void          fb_AssertWarnW     ( char *filename, int linenum, char *funcname, FB_WCHAR *expression );
        FB_ERRHANDLER fb_ErrorThrowEx    ( int errnum, int linenum, const char *fname,
                                           void *res_label, void *resnext_label );
 FBCALL FB_ERRHANDLER fb_ErrorSetHandler ( FB_ERRHANDLER newhandler );
